updated index page

--- a/Shared/MainLayout.razor
+++ b/Shared/MainLayout.razor
@@ -3,13 +3,24 @@
 <div class="page">
     <div class="sidebar">
         <NavMenu />
+
+        <ul class="nav justify-content-md-center">
+            <li class="nav-item">
+                <a class="nav-link link-secondary" href="https://twitter.com/mohdali" target="_blank" rel="noopener">
+                    <i class="fab fa-twitter"></i>
+                    <small class="d-md-none ms-2">mohdali</small>
+                </a>
+            </li>
+
+            <li class="nav-item">
+                <a class="nav-link link-secondary" href="https://github.com/mohdali/" target="_blank" rel="noopener">
+                    <i class="fab fa-github"></i>
+                    <small class="d-md-none ms-2">mohdali</small>
+                </a>
+            </li>
+        </ul>
     </div>
-
     <main>
-        <div class="top-row px-4">
-            <a href="https://docs.microsoft.com/aspnet/" target="_blank">About</a>
-        </div>
-
         <article class="content px-4">
             @Body
         </article>
