--- a/Shared/MainLayout.razor
+++ b/Shared/MainLayout.razor
@@ -18,6 +18,13 @@
                     <small class="d-md-none ms-2">mohdali</small>
                 </a>
             </li>
+            
+            <li class="nav-item">
+                <a rel="me" class="nav-link link-secondary" href="https://mastodon.online/@mohdali" target="_blank">
+                    <i class="fab fa-mastodon"></i>
+                    <small class="d-md-none ms-2">mohdali</small>
+                </a>
+            </li>
         </ul>
     </div>
     <main>
