--- a/Pages/Rolling-Shutter-Simulation.razor
+++ b/Pages/Rolling-Shutter-Simulation.razor
@@ -6,5 +6,5 @@
 <i>Imported from: <a href="https://bl.ocks.org/mohdali/36f427bc905f11f0271977c53eb8bbf6" target="_blank">https://bl.ocks.org/mohdali/36f427bc905f11f0271977c53eb8bbf6</a></i>
 
 <p>Use the sliders to change the simulation parameters.</p>
-<iframe width="100%" height="604" frameborder="0"
+<iframe loading="lazy" width="100%" height="604" frameborder="0"
   src="https://observablehq.com/embed/@@mohdali/rolling-shutter-simulation?cells=code%2Cviewof+numOfBlades%2Cviewof+rotationSpeed%2Cviewof+angle"></iframe>
