Initial implementation for a blog system

--- a/Pages/Posts/Rolling-Shutter.razor
+++ b/Pages/Posts/Rolling-Shutter.razor
@@ -1,9 +1,7 @@
-﻿@page "/"
-@page "/Rolling-Shutter-Simulation"
-
-<PageTitle>mohdali.dev</PageTitle>
+﻿@page "/posts/Rolling-Shutter-Simulation"
+@page "/"
+<PageTitle>Rolling Shutter Simulation - mohdali.dev</PageTitle>
 <h1>Rolling Shutter Simulation</h1>
-<i>Imported from: <a href="https://bl.ocks.org/mohdali/36f427bc905f11f0271977c53eb8bbf6" target="_blank">https://bl.ocks.org/mohdali/36f427bc905f11f0271977c53eb8bbf6</a></i>
 
 <p>Use the sliders to change the simulation parameters.</p>
 <iframe loading="lazy" width="100%" height="604" frameborder="0"
