--- a/Shared/NavMenu.razor
+++ b/Shared/NavMenu.razor
@@ -1,32 +1,27 @@
-﻿<div class="top-row ps-3 navbar navbar-dark">
+﻿<nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
     <div class="container-fluid">
-        <a class="navbar-brand" href="">mohdali.dev</a>
+        <a class="navbar-brand" href="#">mohdali.dev</a>
+        
         <button title="Navigation menu" class="navbar-toggler" @onclick="ToggleNavMenu">
             <span class="navbar-toggler-icon"></span>
         </button>
-    </div>
-</div>
-
-<div class="@NavMenuCssClass" @onclick="ToggleNavMenu">
-    <nav class="flex-column">
-        <div class="nav-item px-3">
-            @foreach(var blogPost in BlogPosts) {
-                <NavLink class="nav-link" href=@blogPost.Url Match="NavLinkMatch.All">
-                    <span class="oi oi-home" aria-hidden="true"></span> @blogPost.Title
-                </NavLink>
-            }
-            
+        
+        <div class="@NavMenuCssClass navbar-collapse" @onclick="ToggleNavMenu">
+            <ul class="navbar-nav me-auto mb-2 mb-md-0">
+                <li class="nav-item px-3">
+                        <NavLink class="nav-link" href="/" Match="NavLinkMatch.All">
+                            Home
+                        </NavLink>            
+                </li>
+            </ul>
         </div>
-    </nav>
-</div>
+    </div>
+</nav>
 
 @code {
     private bool collapseNavMenu = true;
 
-    private string? NavMenuCssClass => collapseNavMenu ? "collapse" : null;
-
-    private List<BlogPost> BlogPosts => BlogPostsHelper.GetBlogPosts(typeof(Program).Assembly);
-    
+    private string? NavMenuCssClass => collapseNavMenu ? "collapse" : null;     
 
     private void ToggleNavMenu()
     {
