--- a/Shared/MainLayout.razor
+++ b/Shared/MainLayout.razor
@@ -4,7 +4,7 @@
     <NavMenu />            
 </header>
 <main class="flex-shrink-0">
-    <div class="container">
+    <div class="container mb-5">
         @Body
     </div>
 </main>
