--- a/Pages/Home.razor
+++ b/Pages/Home.razor
@@ -1,6 +1,6 @@
 @page "/"
 <div class="row">
-    <div class="col-6">
+    <div class="col-lg-6">
         <h1 class="mt-5"> Latest Posts </h1>
         <div class="d-flex flex-column">
             <div class="d-flex flex-row justify-content-between">
