Move Post title to PostLayout

--- a/Pages/PostLayout.razor
+++ b/Pages/PostLayout.razor
@@ -5,6 +5,8 @@
     <small class="text-muted">
         Published: @BlogPost?.Timestamp.ToString("dd MMMM yyyy")
     </small>
+    <h1>@BlogPost?.Title</h1>
+    <PageTitle>@BlogPost?.Title - mohdali.dev</PageTitle>
     @Body
 </CascadingValue>
 
