--- a/Pages/Posts/2018/2018-02-10-Rolling-Shutter-Simulation.razor
+++ b/Pages/Posts/2018/2018-02-10-Rolling-Shutter-Simulation.razor
@@ -15,9 +15,9 @@
   <a href="https://observablehq.com/@@mbostock" target="_blank">Mike Bostock</a> himself.
 </p>
 
-@if (!@Summary)
-{
+<Detail>
   <p><em>Use the sliders to change the simulation parameters.</em></p>
   <iframe loading="lazy" width="100%" height="604" frameborder="0"
     src="https://observablehq.com/embed/@@mohdali/rolling-shutter-simulation?cells=code%2Cviewof+numOfBlades%2Cviewof+rotationSpeed%2Cviewof+angle"></iframe>
-}
+  
+</Detail>
