--- a/Pages/Posts/2018/2018-02-10-Rolling-Shutter-Simulation.razor
+++ b/Pages/Posts/2018/2018-02-10-Rolling-Shutter-Simulation.razor
@@ -1,5 +1,16 @@
 ﻿@page "/posts/Rolling-Shutter-Simulation"
 
+<figure>
+  <img src="images/Propellor_with_rolling-shutter_artifact.jpg" class="figure-img img-fluid rounded"
+    alt="Propellor with rolling-shutter artifact" />
+  <figcaption class="figure-caption text-right">
+    <small>
+      <a href="https://commons.wikimedia.org/wiki/File:Propellor_with_rolling-shutter_artifact.jpg">Dicklyon</a>, <a
+        href="https://creativecommons.org/licenses/by-sa/4.0">CC BY-SA 4.0</a>, via Wikimedia Commons
+    </small>
+  </figcaption>
+</figure>
+
 <p>In 2017 there was some interst in explaining the <a href="https://en.wikipedia.org/wiki/Rolling_shutter"
     target="_blank">Rolling Shutter</a> Effect in cameras including videos by Destin's <a
     href="https://www.youtube.com/watch?v=dNVtMmLlnoE" target="_blank">Smarter Everyday Channel</a> and Matt Parker's <a
@@ -19,5 +30,5 @@
   <p><em>Use the sliders to change the simulation parameters.</em></p>
   <iframe loading="lazy" width="100%" height="604" frameborder="0"
     src="https://observablehq.com/embed/@@mohdali/rolling-shutter-simulation?cells=code%2Cviewof+numOfBlades%2Cviewof+rotationSpeed%2Cviewof+angle"></iframe>
-  
+
 </Detail>
