--- a/Pages/Home.razor
+++ b/Pages/Home.razor
@@ -1,26 +1,26 @@
 @page "/"
 <div class="row">
     <h3 class="mt-5"> Latest Posts </h3>
-    <div class="d-flex flex-column">
 
         @foreach (var blogPost in BlogPosts)
         {
-            <div class="d-flex flex-row justify-content-between">
-                <h1>
-                    <NavLink href=@blogPost.Url Match="NavLinkMatch.All">
-                        @blogPost.Title
-                    </NavLink>
-                </h1>
+            <div class="row">
                 <small class="text-muted">
-                    Published: @blogPost.Timestamp.ToString("dd MMM yyyy")
+                    Published: @blogPost?.Timestamp.ToString("dd MMMM yyyy")
                 </small>
+                <h1>@blogPost?.Title</h1>
+                
+                <CascadingValue Value="@summary">
+                    <DynamicComponent Type="@blogPost.Type" />
+                </CascadingValue>
+                
+                <p>
+                    <NavLink href=@blogPost.Url Match="NavLinkMatch.All" class="btn btn-primary">
+                        Continue Reading
+                    </NavLink>
+                </p>
             </div>
-            <CascadingValue Value="@summary">
-                <DynamicComponent Type="@blogPost.Type" />
-            </CascadingValue>
         }
-
-    </div>
 </div>
 
 @code {
