fix test alignment

--- a/Pages/Posts/2018/2018-02-10-Rolling-Shutter-Simulation.razor
+++ b/Pages/Posts/2018/2018-02-10-Rolling-Shutter-Simulation.razor
@@ -3,7 +3,7 @@
 <figure>
   <img src="images/Propellor_with_rolling-shutter_artifact.jpg" class="figure-img img-fluid rounded"
     alt="Propellor with rolling-shutter artifact" />
-  <figcaption class="figure-caption text-right">
+  <figcaption class="figure-caption text-end">
     <small>
       <a href="https://commons.wikimedia.org/wiki/File:Propellor_with_rolling-shutter_artifact.jpg">Dicklyon</a>, <a
         href="https://creativecommons.org/licenses/by-sa/4.0">CC BY-SA 4.0</a>, via Wikimedia Commons
