--- a/Pages/Home.razor
+++ b/Pages/Home.razor
@@ -1,6 +1,6 @@
 @page "/"
-<div class="row">
-    <h3 class="mt-5"> Latest Posts </h3>
+<div class="row mb-5">
+    <h3> Latest Posts </h3>
 
         @foreach (var blogPost in BlogPosts)
         {
@@ -13,7 +13,7 @@
                 <CascadingValue Value="@summary">
                     <DynamicComponent Type="@blogPost.Type" />
                 </CascadingValue>
-                
+
                 <p>
                     <NavLink href=@blogPost.Url Match="NavLinkMatch.All" class="btn btn-primary">
                         Continue Reading
