--- a/Shared/MainLayout.razor
+++ b/Shared/MainLayout.razor
@@ -8,7 +8,7 @@
         @Body
     </div>
 </main>
-<footer class="footer fixed-bottom py-3 bg-light">
+<footer class="footer fixed-bottom py-3 bg-body-tertiary">
     <div class="container">
         <div class="row my-auto">
             <div class="col-5 d-flex">
