--- a/Shared/NavMenu.razor
+++ b/Shared/NavMenu.razor
@@ -1,4 +1,4 @@
-﻿<nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+﻿<nav class="navbar navbar-expand-md bg-body-secondary fixed-top">
     <div class="container-fluid">
         <a class="navbar-brand" href="#">mohdali.dev</a>
         
