Add scrolling to Continue Reading

--- a/Pages/Home.razor
+++ b/Pages/Home.razor
@@ -15,7 +15,7 @@
                 </CascadingValue>
 
                 <p>
-                    <NavLink href=@blogPost.Url Match="NavLinkMatch.All" class="btn btn-primary">
+                    <NavLink href=@(blogPost.Url+"#detail") Match="NavLinkMatch.All" class="btn btn-primary">
                         Continue Reading
                     </NavLink>
                 </p>
