--- a/Pages/Home.razor
+++ b/Pages/Home.razor
@@ -15,9 +15,9 @@
                 </CascadingValue>
 
                 <p>
-                    <NavLink href=@(blogPost.Url+"#detail") Match="NavLinkMatch.All" class="btn btn-primary">
+                    <MudButton href=@(blogPost.Url+"#detail") Match="NavLinkMatch.All" class="btn btn-primary">
                         Continue Reading
-                    </NavLink>
+                    </MudButton>
                 </p>
             </div>
         }
