--- a/Shared/MainLayout.razor
+++ b/Shared/MainLayout.razor
@@ -15,8 +15,10 @@
         <MudIconButton Icon="fab fa-mastodon" Target="_blank" Href="https://mastodon.online/&#64;mohdali" />
         <MudIconButton Icon="@observableIcon" Target="_blank" href="https://observablehq.com/&#64;mohdali" />
     </MudAppBar>
-    <MudMainContent>
-        @Body
+    <MudMainContent class="main-content">
+        <MudContainer Class="mt-3">
+            @Body
+        </MudContainer>
     </MudMainContent>
 </MudLayout>
 
