--- a/Shared/MainLayout.razor
+++ b/Shared/MainLayout.razor
@@ -1,6 +1,6 @@
 ﻿@inherits LayoutComponentBase
 
-<MudThemeProvider @ref="@_mudThemeProvider" @bind-IsDarkMode="@_isDarkMode" />
+<MudThemeProvider @ref="@_mudThemeProvider" IsDarkMode="true" />
 <MudDialogProvider />
 <MudSnackbarProvider />
 
