--- a/src/mohdali.github.io/_Imports.razor
+++ b/src/mohdali.github.io/_Imports.razor
@@ -6,6 +6,7 @@
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.AspNetCore.Components.WebAssembly.Http
 @using Microsoft.JSInterop
+@using BlogEngine
 @using mohdali.github.io
 @using mohdali.github.io.Shared
 @using MudBlazor
