--- a/src/mohdali.github.io/Shared/MainLayout.razor
+++ b/src/mohdali.github.io/Shared/MainLayout.razor
@@ -14,6 +14,7 @@
     <MudMainContent class="main-content mb-16">
         <MudContainer Class="mt-3">
             @Body
+            <p class="mt-16">&nbsp;</p>
         </MudContainer>
     </MudMainContent>
     <MudAppBar Bottom="true" Fixed="true" Color="Color.Dark" Elevation="1">
