--- a/src/mohdali.github.io/Shared/MainLayout.razor
+++ b/src/mohdali.github.io/Shared/MainLayout.razor
@@ -8,11 +8,11 @@
 
 
 <MudLayout>
-    <MudAppBar Color="Color.Primary">
+    <MudAppBar>
         <MudTooltip Text="Home">
-            <MudIconButton Icon="@Icons.Material.Filled.Home" href="/" />
+            <MudIconButton Icon="@Icons.Material.Filled.Home" Color="Color.Inherit" href="/" />
         </MudTooltip>
-        <MudLink Typo="Typo.h5" class="ml-3 logo" Href="/" Color="Color.Default">mohdali.dev</MudLink>
+        <MudLink Typo="Typo.h5" class="ml-3 logo" Href="/" Color="Color.Inherit">mohdali.dev</MudLink>
         <MudSpacer />
         <ThemeSwitcher />
 
@@ -27,16 +27,16 @@
         <p>&copy; Mohamed Ali</p>
         <MudSpacer />
         <MudTooltip Text="Github Profile">
-            <MudIconButton Icon="@Icons.Custom.Brands.GitHub" Target="_blank" href="https://github.com/mohdali/" />
+            <MudIconButton Icon="@Icons.Custom.Brands.GitHub" Target="_blank" href="https://github.com/mohdali/" Color="Color.Inherit"/>
         </MudTooltip>
         <MudTooltip Text="Twitter Profile">
-            <MudIconButton Icon="@Icons.Custom.Brands.Twitter" Target="_blank" href="https://twitter.com/mohdali" />
+            <MudIconButton Icon="@Icons.Custom.Brands.Twitter" Target="_blank" href="https://twitter.com/mohdali" Color="Color.Inherit"/>
         </MudTooltip>
         <MudTooltip Text="Mastodon Profile">
-            <MudIconButton Icon="fab fa-mastodon" Target="_blank" Href="https://mastodon.online/&#64;mohdali" />
+            <MudIconButton Icon="fab fa-mastodon" Target="_blank" Href="https://mastodon.online/&#64;mohdali" Color="Color.Inherit"/>
         </MudTooltip>
         <MudTooltip Text="Observalbe Profile">
-            <MudIconButton Icon="@observableIcon" Target="_blank" href="https://observablehq.com/&#64;mohdali" />
+            <MudIconButton Icon="@observableIcon" Target="_blank" href="https://observablehq.com/&#64;mohdali" Color="Color.Inherit"/>
         </MudTooltip>
     </MudAppBar>
 </MudLayout>
